# microsoft-purview-security-analyzer

./: .gitignore  .replit  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_UPLOAD_GUIDE.md  HOW-TO.md  INSTALLATION.md  LICENSE  README.md  app.py  app_new.py  processor.py  pyproject.toml  replit.md  security_analyzer.py  setup.py  utils.py  visualizer.py
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml
attached_assets/: Pasted-import-pandas-as-pd-import-json-import-geoip2-database-def-parse-audit-logs-file-path-geoip-db-pat-1745859068805.txt
utils/: __init__.py  file_processor.py  ip_analyzer.py  map_generator.py
