[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "geoip2>=5.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
]
