[project]
name = "microsoft-purview-security-analyzer"
version = "1.0.0"
description = "A web-based security analysis tool for Microsoft Purview audit logs"
authors = [
    {name = "Security Analyzer Team"}
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/microsoft-purview-security-analyzer"
repository = "https://github.com/yourusername/microsoft-purview-security-analyzer"
keywords = ["security", "audit", "analysis", "microsoft", "purview", "streamlit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: Log Analysis"
]
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "geoip2>=5.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
]
